--- a/templates/index.html
+++ b/templates/index.html
@@ -10,5 +10,6 @@
     <h1>Home - Node + Express </h1>
     <a href="/usuarios/30">Ver usuario 30</a>
     <a href="/usuarios/496">Ver usuario 496</a>
+    <a href="/cadastrar">Cadastrar</a>
 </body>
 </html>
